--- a/doc/references.bib
+++ b/doc/references.bib
@@ -5,3 +5,26 @@
   howpublished = {\url{https://rosettacode.org/wiki/Solve_a_Hopido_puzzle}},
   note = {Accessed: 2025-09-17}
 }
+
+@manual{neo4j,
+  title = {Neo4j Graph Database},
+  author = {{Neo4j, Inc.}},
+  year = {2025},
+  note = {Version 2025.07.01},
+  url = {https://neo4j.com}
+}
+
+@misc{apoc,
+  author = {{Neo4j Labs}},
+  title = {APOC: Awesome Procedures On Cypher},
+  year = {2025},
+  note = {Version 2025.07.1core},
+  url = {https://neo4j.com/labs/apoc}
+}
+
+@article{
+  warnsdorff,
+  author = {H. C. von Warnsdorff},
+  title = {Des Rösselsprunges einfachste und allgemeinste Lösung},
+  url = {https://zs.thulb.uni-jena.de/receive/jportal_jparticle_00189099}
+}
