--- a/doc/references.bib
+++ b/doc/references.bib
@@ -22,8 +22,7 @@
   url = {https://neo4j.com/labs/apoc}
 }
 
-@article{
-  warnsdorff,
+@misc{warnsdorff,
   author = {H. C. von Warnsdorff},
   title = {Des Rösselsprunges einfachste und allgemeinste Lösung},
   url = {https://zs.thulb.uni-jena.de/receive/jportal_jparticle_00189099}
