--- a/doc/references.bib
+++ b/doc/references.bib
@@ -27,3 +27,13 @@
   title = {Des Rösselsprunges einfachste und allgemeinste Lösung},
   url = {https://zs.thulb.uni-jena.de/receive/jportal_jparticle_00189099}
 }
+
+@inbook{np,
+	author    = {Sipser, Michael},
+	title     = {Introduction to the Theory of Computation},
+	edition   = {3rd},
+	year      = {2013},
+	publisher = {Cengage Learning},
+	pages     = {292--314}
+}
+
